@@ -1,3 +1,15 @@
+2011-07-13  Andreas Kling  <kling@webkit.org>
+
+        [Qt][WK2] Undelayed WorkItems are leaked after execution.
+        https://bugs.webkit.org/show_bug.cgi?id=64447
+
+        Reviewed by Benjamin Poulain.
+
+        * Platform/qt/WorkQueueQt.cpp:
+        (WorkQueue::WorkItemQt::executeAndDelete):
+        (WorkQueue::WorkItemQt::timerEvent):
+        (WorkQueue::scheduleWork):
+
 2011-07-12  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
 
         [Qt] Also stop the scale commit timer when commitScaleChange is called explicitly.
